--- a/security/nipper/Makefile
+++ b/security/nipper/Makefile
@@ -1,14 +1,14 @@
-# $OpenBSD: Makefile,v 1.3 2009/08/30 16:44:45 steven Exp $
+# $OpenBSD: Makefile,v 1.5 2010/07/21 21:34:08 steven Exp $
 
 COMMENT =		audit network device configuration
 
 V =			0.12.0
 DISTNAME =		nipper-cli-$V
-PKGNAME =		nipper-$Vp0
+PKGNAME =		nipper-$V
+REVISION =		1
 CATEGORIES =		security net
 
 HOMEPAGE =		http://nipper.sf.net/
-MAINTAINER =		Steven Mestdagh <steven@openbsd.org>
 
 # GPLv3, but "cannot be used as part of a commercial product"
 PERMIT_PACKAGE_CDROM =	No
@@ -18,9 +18,9 @@ PERMIT_DISTFILES_FTP =	Yes
 
 EXTRACT_SUFX =		.tgz
 
-WANTLIB =		c m stdc++
+WANTLIB =		c m stdc++ nipper
 
-LIB_DEPENDS=		nipper::security/libnipper
+LIB_DEPENDS=		::security/libnipper
 
 CONFIGURE_STYLE =	cmake
 MODULES +=		devel/cmake
