--- a/devel/automake/1.4/Makefile
+++ b/devel/automake/1.4/Makefile
@@ -1,10 +1,11 @@
-# $OpenBSD: Makefile,v 1.6 2008/01/04 18:38:51 espie Exp $
+# $OpenBSD: Makefile,v 1.8 2010/07/22 12:13:17 ajacoutot Exp $
 
 COMMENT=	GNU Standards-compliant Makefile generator
 
 VERSION=	1.4
 DISTNAME=	automake-${VERSION}-p6
 PKGNAME=	automake-1.4.6
+REVISION=	0
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=automake/}
 
@@ -12,7 +13,7 @@ HOMEPAGE=	http://www.gnu.org/software/automake/
 
 MAINTAINER=	Jason Ish <ish@openbsd.org>
 
-# GPL
+# GPLv2
 PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
@@ -25,8 +26,14 @@ REGRESS_DEPENDS=:gmake-*:devel/gmake
 SUFFIX=		-${VERSION}
 SUBST_VARS=	SUFFIX
 
+pre-configure:
+	${SUBST_CMD} ${WRKSRC}/automake.texi
+
+post-install:
+	cd ${PREFIX}/info && mv automake.info automake${SUFFIX}.info
+
 do-regress:
-	cd ${WRKBUILD} && exec ${SETENV} ${MAKE_ENV} MAKE=gmake gmake -f \
+	cd ${WRKBUILD} && exec ${SETENV} ${MAKE_ENV} MAKE=${GMAKE} ${GMAKE} -f \
 	    ${MAKE_FILE} ${ALL_REGRESS_FLAGS} ${REGRESS_TARGET}
 
 .include <bsd.port.mk>
