--- a/devel/automake/1.8/Makefile
+++ b/devel/automake/1.8/Makefile
@@ -1,16 +1,17 @@
-# $OpenBSD: Makefile,v 1.6 2008/01/04 18:38:51 espie Exp $
+# $OpenBSD: Makefile,v 1.8 2010/07/22 12:13:17 ajacoutot Exp $
 
 COMMENT=	GNU standards-compliant Makefile generator
 
 VERSION=	1.8
 DISTNAME=	automake-${VERSION}.5
-PKGNAME=	${DISTNAME}p1
+REVISION=	2
 
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU:=automake/}
 
 HOMEPAGE=	http://www.gnu.org/software/automake/
 
+# GPLv2
 PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
@@ -32,6 +33,8 @@ REGRESS_DEPENDS=	${MODGNU_AUTOCONF_DEPENDS} \
 			::devel/libtool
 REGRESS_FLAGS=		AUTOCONF_VERSION=${AUTOCONF_VERSION}
 
+pre-configure:
+	${SUBST_CMD} ${WRKSRC}/doc/automake.texi
 
 post-install:
 	cd ${PREFIX}/info && mv automake.info automake${SUFFIX}.info
