--- a/chinese/c2t/Makefile
+++ b/chinese/c2t/Makefile
@@ -1,9 +1,9 @@
-# $OpenBSD: Makefile,v 1.23 2010/04/15 13:56:34 ajacoutot Exp $	
+# $OpenBSD: Makefile,v 1.25 2010/07/24 08:01:40 ajacoutot Exp $	
 
 COMMENT=	translate GB/Big5 encoding to tone pinyin
 
 DISTNAME=	zh-c2t-1.0
-PKGNAME=	${DISTNAME}p0
+REVISION=	0
 CATEGORIES=	chinese
 
 MAINTAINER=     Kevin Lo <kevlo@openbsd.org>
@@ -12,6 +12,7 @@ PERMIT_PACKAGE_CDROM=	Yes
 PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
+
 WANTLIB=		c
 
 MASTER_SITES=	ftp://ftp.cuhk.hk/pub/chinese/ifcss/software/unix/convert/
