--- a/net/nagios/nagios/Makefile
+++ b/net/nagios/nagios/Makefile
@@ -1,9 +1,9 @@
-# $OpenBSD: Makefile,v 1.37 2009/09/12 12:35:20 sturm Exp $
+# $OpenBSD: Makefile,v 1.39 2010/08/28 09:42:45 sthen Exp $
 
 COMMENT-main=	host and service monitor
 COMMENT-web=	cgis and webpages for nagios
 
-V=		3.2.0
+V=		3.2.1
 DISTNAME=	nagios-${V}
 PKGNAME-main=	nagios-${V}
 PKGNAME-web=	nagios-web-${V}
@@ -11,7 +11,7 @@ CATEGORIES=	net
 
 HOMEPAGE=	http://www.nagios.org/
 
-MAINTAINER=	Nikolay Sturm <sturm@openbsd.org>
+MAINTAINER=	Stuart Henderson <sthen@openbsd.org>
 
 # GPL
 PERMIT_PACKAGE_CDROM=	Yes
@@ -24,7 +24,7 @@ MULTI_PACKAGES=	-main -web
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=nagios/}
 
 BUILD_DEPENDS=	:gd-*:graphics/gd
-LIB_DEPENDS=	ltdl.>=4::devel/libtool,-ltdl
+LIB_DEPENDS=	::devel/libtool,-ltdl
 RUN_DEPENDS=	:nagios-plugins-*:net/nagios/plugins \
 		::www/php5/core
 
@@ -70,7 +70,7 @@ LIB_DEPENDS-web=gd::graphics/gd
 RUN_DEPENDS-web=:nagios-${V}-!chroot:net/nagios/nagios
 .endif
 
-WANTLIB-main=	${WANTLIB} pthread
+WANTLIB-main=	${WANTLIB} ltdl.>=4 pthread
 
 NO_REGRESS=	Yes
 
