--- a/www/opera/Makefile
+++ b/www/opera/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.66 2010/06/26 06:18:08 sturm Exp $
+# $OpenBSD: Makefile,v 1.68 2010/08/28 17:02:52 ajacoutot Exp $
 
 ONLY_FOR_ARCHS=	i386
 SHARED_ONLY=	Yes
@@ -9,11 +9,12 @@ V=		10.11
 OPERA_BUILD=	4791
 DISTNAME=	opera-${V}.gcc4-shared-qt3.i386
 PKGNAME=	opera-${V}
+REVISION=	1
 CATEGORIES=	www
 
-HOMEPAGE=	http://www.opera.com/
+MAINTAINER=	Antoine Jacoutot <ajacoutot@openbsd.org>
 
-MAINTAINER=	Nikolay Sturm <sturm@openbsd.org>
+HOMEPAGE=	http://www.opera.com/
 
 PERMIT_PACKAGE_CDROM=	Commercial software
 PERMIT_PACKAGE_FTP=	Commercial software
