--- a/productivity/when/Makefile
+++ b/productivity/when/Makefile
@@ -1,9 +1,8 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2010/09/10 11:13:20 jasper Exp $
+# $OpenBSD: Makefile,v 1.3 2010/09/10 17:03:31 jasper Exp $
 
 COMMENT=		simple but effective personal calendar
 
-DISTNAME=		when
-PKGNAME=		when-1.1.21
+DISTNAME=		when-1.1.21
 CATEGORIES=		productivity
 
 HOMEPAGE=		http://www.lightandmatter.com/when/when.html
@@ -19,7 +18,6 @@ MASTER_SITES=		http://www.phil.uu.nl/~lievisse/distfiles/
 NO_BUILD=		Yes
 PKG_ARCH=		*
 
-WRKDIST= 		${WRKDIR}/when_dist
  # Requires interactive terminal and other hoops not worth going through.
 NO_REGRESS=		Yes
 
