--- a/mail/amavisd-new/Makefile
+++ b/mail/amavisd-new/Makefile
@@ -1,9 +1,9 @@
-# $OpenBSD: Makefile,v 1.14 2010/11/19 07:23:05 espie Exp $
+# $OpenBSD: Makefile,v 1.16 2010/11/23 18:15:18 ajacoutot Exp $
 
 COMMENT=		interface between mailer MTA and content checkers
 
 DISTNAME=		amavisd-new-2.6.4
-REVISION =		1
+REVISION=		3
 CATEGORIES=		mail security
 
 HOMEPAGE=		http://www.ijs.si/software/amavisd/
