--- a/security/p5-GnuPG-Interface/Makefile
+++ b/security/p5-GnuPG-Interface/Makefile
@@ -1,10 +1,10 @@
-# $OpenBSD: Makefile,v 1.14 2010/10/18 21:41:47 espie Exp $
+# $OpenBSD: Makefile,v 1.17 2010/12/03 11:46:47 ajacoutot Exp $
 
 COMMENT=	perl5 interface to GnuPG
 
 MODULES=	cpan
 DISTNAME=	GnuPG-Interface-0.36
-REVISION=	0
+REVISION=	1
 CATEGORIES=	security
 USE_GROFF =	Yes
 
@@ -15,7 +15,7 @@ PERMIT_DISTFILES_CDROM= Yes
 PERMIT_DISTFILES_FTP=   Yes
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
-RUN_DEPENDS=	::devel/p5-Class-MethodMaker \
-		:gnupg-<2:security/gnupg
+RUN_DEPENDS=	devel/p5-Class-MethodMaker \
+		security/gnupg
 
 .include <bsd.port.mk>	
