--- a/security/p5-IO-Socket-SSL/Makefile
+++ b/security/p5-IO-Socket-SSL/Makefile
@@ -1,8 +1,8 @@
-# $OpenBSD: Makefile,v 1.35 2010/11/08 20:00:13 bluhm Exp $
+# $OpenBSD: Makefile,v 1.39 2010/12/09 16:42:04 bluhm Exp $
 
 COMMENT =		perl interface to SSL sockets
 
-DISTNAME =		IO-Socket-SSL-1.34
+DISTNAME =		IO-Socket-SSL-1.37
 
 CATEGORIES =		security
 
@@ -16,8 +16,8 @@ PERMIT_DISTFILES_FTP =	Yes
 
 MODULES =		cpan
 BUILD_DEPENDS =		${RUN_DEPENDS}
-RUN_DEPENDS =		:p5-Net-SSLeay->=1.21:security/p5-Net_SSLeay
-REGRESS_DEPENDS =	::net/p5-IO-Socket-INET6
+RUN_DEPENDS =		security/p5-Net_SSLeay>=1.21
+REGRESS_DEPENDS =	net/p5-IO-Socket-INET6
 USE_GROFF =		Yes
 
 MODCPAN_EXAMPLES =	Yes
