--- a/security/shash/Makefile
+++ b/security/shash/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.13 2010/10/18 21:41:47 espie Exp $
+# $OpenBSD: Makefile,v 1.15 2010/11/20 17:22:45 espie Exp $
 
 COMMENT=	generates or checks digests or mac
 
@@ -18,17 +18,17 @@ MASTER_SITES=		ftp://mcrypt.hellug.gr/pub/mcrypt/shash/
 
 CONFIGURE_STYLE=	gnu
 CONFIGURE_ENV+=		CFLAGS='-I${LOCALBASE}/include -L${LOCALBASE}/lib'
-USE_GROFF =	Yes
+USE_GROFF =		Yes
 
 FLAVORS=		static
 FLAVOR?=
 
 .if ${FLAVOR:L:Mstatic}
-BUILD_DEPENDS+=		::security/mhash
+BUILD_DEPENDS+=		security/mhash
 CONFIGURE_ARGS+=	--enable-static-link
 .else
-LIB_DEPENDS+=		mhash.>=2::security/mhash
-WANTLIB=		c pthread
+LIB_DEPENDS+=		security/mhash
+WANTLIB=		c pthread mhash>=2
 .endif
 
 .include <bsd.port.mk>
