--- a/www/nginx/pkg/nginx.rc
+++ b/www/nginx/pkg/nginx.rc
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $OpenBSD: nginx.rc,v 1.5 2010/12/27 14:50:24 ajacoutot Exp $
+# $OpenBSD: nginx.rc,v 1.7 2011/03/09 19:37:47 ajacoutot Exp $
 
 daemon="${TRUEPREFIX}/sbin/nginx"
 
@@ -9,11 +9,11 @@ daemon="${TRUEPREFIX}/sbin/nginx"
 pexp="nginx:.*master.*process"
 
 rc_reload() {
-	${daemon} -s reload >/dev/null
+	${daemon} -s reload
 }
 
 rc_stop() {
-	${daemon} -s stop >/dev/null
+	${daemon} -s stop
 	[ $? -gt 0 ] && pkill -f "^${pexp}"
 }
 
