--- a/graphics/ImageMagick/Makefile
+++ b/graphics/ImageMagick/Makefile
@@ -1,16 +1,17 @@
-# $OpenBSD: Makefile,v 1.111 2010/11/17 08:05:12 espie Exp $
+# $OpenBSD: Makefile,v 1.112 2011/07/06 22:43:00 kili Exp $
+
+SHARED_ONLY=		Yes
 
 COMMENT=		image processing tools
 
-VER=			6.4.5
-DASHVER=		6
+VER=			6.6.6
+DASHVER=		10
 DISTNAME=		ImageMagick-${VER}-${DASHVER}
 PKGNAME=		ImageMagick-${VER}.${DASHVER}
-REVISION =		0
 
-SHARED_LIBS +=		Magick++	13.0	# .1.0
-SHARED_LIBS +=		MagickCore	1.0	# .1.0
-SHARED_LIBS +=		MagickWand	1.0	# .1.0
+SHARED_LIBS +=		Magick++	14.0	# .1.0
+SHARED_LIBS +=		MagickCore	2.0	# .1.0
+SHARED_LIBS +=		MagickWand	2.0	# .1.0
 
 CATEGORIES=		graphics
 
@@ -29,18 +30,25 @@ PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 
-WANTLIB =		c jpeg m z bz2>=10 jbig>=1.2 png>=4 tiff>=36 \
-			lcms>=1 jasper>=1
+WANTLIB =		c bz2>=10 djvulibre fftw3 jasper>=1 jbig>=1.2 jpeg \
+			lcms>=1 lzma ltdl m perl png>=4 pthread stdc++ \
+			tiff>=36 z
 
 LIB_DEPENDS =		archivers/bzip2 \
+			archivers/xz \
+			devel/libtool,-ltdl \
+			graphics/djvulibre \
 			graphics/jbigkit \
 			graphics/png \
 			graphics/tiff \
 			graphics/lcms \
-			graphics/jasper
+			graphics/jasper \
+			math/fftw3
 
 RUN_DEPENDS=		graphics/netpbm
 BUILD_DEPENDS=		graphics/netpbm
+
+ALL_TARGET=		all perl-build
 
 # using libltdl stuff
 USE_LIBTOOL=		gnu
@@ -54,7 +62,6 @@ CONFIGURE_ARGS+=	--with-quantum-depth=16 \
 			--without-lqr \
 			--without-modules \
 			--without-openexr \
-			--without-threads \
 			--with-perl=/usr/bin/perl \
 			--without-rsvg \
 			--with-ltdl-include=${LOCALBASE}/include \
@@ -63,6 +70,7 @@ CONFIGURE_ARGS+=	--with-quantum-depth=16 \
 
 CONFIGURE_ENV+=		CPPFLAGS="-I${LOCALBASE}/include/libpng -I${LOCALBASE}/include/libxml2 -I${LOCALBASE}/include" \
 			LDFLAGS="-L${WRKBUILD}/magick/.libs -L${WRKBUILD}/wand/.libs -L${LOCALBASE}/lib" \
+			PTHREAD_CFLAGS="-pthread" PTHREAD_LIBS="-pthread" \
 			ac_cv_path_LaunchDelegate=no
 
 FLAVORS=		no_x11
@@ -77,7 +85,7 @@ CONFIGURE_ARGS +=	--without-x \
 			--without-wmf
 .else
 WANTLIB +=		ICE SM X11 Xau Xdmcp Xext Xt expat fontconfig \
-			freetype iconv pthread-stubs xcb wmflite>=7 \
+			freetype iconv pthread-stubs xcb wmf wmflite>=7 \
 			xml2>=9
 LIB_DEPENDS +=		graphics/libwmf \
 			textproc/libxml
@@ -87,8 +95,6 @@ BUILD_DEPENDS +=	print/ghostscript/gnu
 BUILD_DEPENDS +=	print/transfig
 CONFIGURE_ARGS +=	--with-wmf
 .endif
-
-WRKDIST=		${WRKDIR}/${DISTNAME:S/-${DASHVER}$//}
 
 post-install:
 	@perl -pi -e s,'-L${WRKBUILD}/(magick|wand)/.libs','',g \
