--- a/devel/libsigc++-2/Makefile
+++ b/devel/libsigc++-2/Makefile
@@ -1,9 +1,9 @@
-# $OpenBSD: Makefile,v 1.22 2011/04/26 09:01:43 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.23 2011/07/25 08:10:58 ajacoutot Exp $
 
 COMMENT-main=		callback framework for C++
 COMMENT-docs=		callback framework for C++ documentation
 
-VERSION=		2.2.9
+VERSION=		2.2.10
 DISTNAME=		libsigc++-${VERSION}
 PKGNAME-main =		${DISTNAME}
 PKGSPEC-main =		libsigc++->=2,<3
@@ -12,9 +12,6 @@ V=			2.0
 SUBST_VARS=		V
 SHARED_LIBS=		sigc-2.0 2.0
 CATEGORIES=		devel
-
-REVISION-main=		0
-REVISION-docs=		0
 
 WANTLIB-main=		m stdc++
 
@@ -26,6 +23,7 @@ PERMIT_PACKAGE_FTP=	Yes
 PERMIT_DISTFILES_CDROM=	Yes
 PERMIT_DISTFILES_FTP=	Yes
 
+EXTRACT_SUFX=		.tar.xz
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/libsigc++/${VERSION:C/^([0-9]+\.[0-9]+).*/\1/}/}
 
 MULTI_PACKAGES=		-main -docs
@@ -38,11 +36,5 @@ USE_LIBTOOL=		Yes
 CONFIGURE_STYLE=	gnu
 CONFIGURE_ARGS+=	${CONFIGURE_SHARED}
 CONFIGURE_ENV=		M4='m4 -g'
-
-# XXX check on update if this is still needed
-# PaxHeader extension is needed
-# https://bugzilla.gnome.org/show_bug.cgi?id=644202
-TAR=			gtar
-BUILD_DEPENDS=		archivers/gtar
 
 .include <bsd.port.mk>
